src/test/resources/validPrograms/lifted_five.frj
class A {
	Int foo;
}

main = new Std().@print(new A(5).foo.@toString());
