src/test/resources/invalidPrograms/methodArgsExist.frj
class A {
	method Int foo(Bar a) = 0;
}

main = 0;
